--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,5 +1,3 @@
-@import url("anim.css");
-
 /***** KAJAX *****/
 @-webkit-keyframes kajax-loader-spinner
 {
@@ -229,14 +227,14 @@ input, button, textarea { font-family:inherit; }
 
 #bar #rss {
 	position: absolute;
-	right: 8px;
+	top: 26px;
+	right: 4px;
 }
 
 #bar #rss a {
-	background:url("../images/rss.png") no-repeat 8px center;
-	padding:5px 10px 5px 24px;
+	padding:3px 12px 3px 12px;
 	text-decoration:none;
-	font-size:12px;
+	font-size:16px;
 	border-radius:4px;
 	-khtml-border-radius:4px;
 	-webkit-border-radius:4px;
@@ -275,42 +273,6 @@ a img { border:0; }
 	border:none;
 }
 
-.admin-editor {
-	width:98%;
-	position:relative;
-	margin:12px auto;
-}
-
-.admin-editor .title {
-	color:#808080;
-	width:100%;
-	font-size:40px;
-	height:42px;
-	display:block;
-	overflow:hidden;
-	outline:none;
-	resize:none;
-	background:transparent;
-	border:none;
-	margin-bottom:8px;
-}
-
-.admin-editor .body {
-	color:#808080;
-	display:block;
-	overflow:hidden;
-	outline:none;
-	resize:none;
-	background:transparent;
-	border:none;
-	width:100%;
-	height:600px;
-	margin-bottom:200px;
-	white-space:pre-wrap;
-	word-wrap:break-word;
-	font-size:inherit;
-}
-
 .square-link {
 	display:block;
 	float:left;
@@ -343,152 +305,6 @@ a img { border:0; }
 }
 
 .square-button:hover { background-color:red; }
-
-#admin-bar {
-	position:fixed;
-	bottom:0px;
-	left:0px;
-	height:76px;
-	width:100%;
-	background-color:#282B2E;
-	z-index:2;
-}
-
-#admin-bar .container {
-	margin:0 auto;
-}
-
-#admin-bar .container .left { float:left; }
-
-#admin-bar .container .right { float:right; }
-
-#admin-bar .container span {
-	display:block;
-	float:left;
-	padding:15px;
-	margin:14px 5px 14px 0;
-	font-weight:bold;
-	text-decoration:none;
-	color:#ffffff;
-	border:none;
-	cursor:pointer;
-}
-
-#admin-bar .container a, #admin-bar .container input[type=submit] {
-	display:block;
-	float:left;
-	padding:15px;
-	margin:14px 5px 14px 0;
-	font-weight:bold;
-	text-decoration:none;
-	color:#ffffff;
-	border:none;
-	cursor:pointer;
-	background-color:black;
-	border-radius:5px;
-	-khtml-border-radius:5px;
-	-webkit-border-radius:5px;
-	-moz-border-radius:5px;
-	font-size:16px;
-	color:white !important;
-}
-
-#admin-bar .container a:hover, #admin-bar .container input[type=submit]:hover { background-color:red; }
-
-#admin-posts {
-	width:98%;
-	margin:0 auto;
-}
-
-#admin-posts h1 { float:left; }
-
-#admin-posts .button {
-	float:right !important;
-	padding:10px;
-	font-size:12px;
-	margin-top:26px;
-}
-
-#admin-posts ul {
-	padding:0;
-	margin:0;
-	clear:both;
-}
-
-#admin-posts li {
-	position:relative;
-	list-style-type:none;
-	padding:18px 0 20px 0;
-	border-bottom:1px solid #e0e0e0;
-}
-
-#admin-posts li a {
-	color:inherit;
-	font-weight:bold;
-	text-decoration:none;
-}
-
-#admin-posts li a:hover { color:red; }
-
-#admin-posts li span {
-	float:right;
-	display:none;
-}
-
-#admin-posts li span a {
-	color:#a0a0a0;
-	margin-left:10px;
-	font-size:12px;
-}
-
-#admin-posts li em {
-	position:absolute;
-	right:0px;
-	bottom:0px;
-	font-size:8px;
-	color:#a0a0a0;
-}
-
-#admin-posts .post_block {
-	float:left;
-	width:100%;
-	padding:20px;
-	box-sizing:border-box;
-}
-
-#admin-posts #drafts {
-	float:left;
-	width:100%;
-	padding:20px;
-	box-sizing:border-box;
-	border:4px solid black;
-	border-top:none;
-}
-
-#admin-posts #published {
-	float:left;
-	width:100%;
-	padding:20px;
-	box-sizing:border-box;
-	color:#a0a0a0;
-}
-
-#admin-posts #logout {
-	font-weight:bold;
-	float:right;
-	clear:both;
-	font-size:14px;
-	margin:5px 36px -50px 0;
-}
-
-#admin-posts #logout a {
-	text-decoration:none;
-	color:#4183c4;
-}
-
-#admin-posts #logout a:hover { text-decoration:underline; }
-
-#admin-posts #logout a { color:#505050 !important; }
 
 .big_title {
 	margin:12px 0 0 12px;
