--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -178,9 +178,10 @@
 #admin-posts #logout {
 	font-weight: bold;
 	font-size: 24px;
-	position: absolute;
+	position: fixed;
 	right: 8px;
 	top: 18px;
+	z-index: 2;
 }
 
 #admin-posts #logout a {
