--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -8,7 +8,7 @@
 .admin-editor .title {
 	color:#808080;
 	width:100%;
-	font-size:40px;
+	font-size: 40px;
 	height:42px;
 	display:block;
 	overflow:hidden;
@@ -51,7 +51,7 @@
 
 #admin-bar .container .left { float:left; }
 
-#admin-bar .container .right { float:right; }
+#admin-bar .container .right { float: right; }
 
 #admin-bar .container span {
 	display:block;
@@ -200,4 +200,12 @@
 
 #admin-posts li:hover span {
 	display: block;
+}
+
+@media only screen and (max-width: 800px)
+{
+	.admin-editor .title {
+		font-size: 22px;
+		height: 24px;
+	}
 }
