--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -91,13 +91,18 @@
 	margin:0 auto;
 }
 
-#admin-posts h1 { float:left; }
+#admin-posts h1 {
+	float:left;
+	margin-top: 0px;
+	margin-bottom: 8px;
+}
 
 #admin-posts .button {
-	float:right !important;
+	float:right;
 	padding:10px;
 	font-size:12px;
-	margin-top:26px;
+	margin-top:0px;
+	margin-bottom: 8px;
 }
 
 #admin-posts ul {
@@ -274,6 +279,43 @@
 	background-color: #FF0000;
 }
 
+.posts_filter
+{
+	float: left;
+	clear: both;
+	font-size: 13px;
+	margin-bottom: 8px;
+	width: 100%;
+}
+
+.status_filter
+{
+	float: left;
+}
+
+.status_filter a
+{
+	text-decoration: none;
+	color: #CD2A2A;
+	transition: all 0.3s ease-in-out 0s;
+}
+
+.status_filter a span
+{
+	color: #AAA;
+	font-size: 12px;
+}
+
+.status_filter a:hover
+{
+	color: #FF0000;
+}
+
+.status_filter a.active
+{
+	color: #000;
+	font-weight: bold;
+}
 
 @media only screen and (max-width: 480px)
 {
