--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -303,6 +303,7 @@ a img { border:0; }
 	-moz-border-radius:5px;
 	font-size:16px;
 	color:white !important;
+	transition: all 0.3s ease-in-out 0s;
 }
 
 .square-button:hover { background-color:red; }
