--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -302,8 +302,7 @@ a img { border:0; }
 	-webkit-border-radius:5px;
 	-moz-border-radius:5px;
 	font-size:16px;
-	color:white !important;
-	transition: all 0.3s ease-in-out 0s;
+	color:white;
 }
 
 .square-button:hover { background-color:red; }
