--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -6,17 +6,19 @@
 }
 
 .admin-editor .title {
-	color:#808080;
-	width:100%;
-	font-size: 40px;
-	height:42px;
-	display:block;
-	overflow:hidden;
-	outline:none;
-	resize:none;
-	background:transparent;
-	border:none;
-	margin-bottom:8px;
+	color: #000000;
+	width: 100%;
+	font-size: 20px;
+	font-weight: bold;
+	height: 32px;
+	line-height: 33px;
+	display: inline-block;
+	margin-bottom: 4px;
+	margin-top: 4px;
+	background-color: #F2F2F2;
+	border: 1px solid rgba(169, 169, 169, 0.5);
+	padding-left: 4px;
+	box-sizing: border-box;
 }
 
 .admin-editor .body {
@@ -140,6 +142,8 @@
 	color:inherit;
 	font-weight:bold;
 	text-decoration:none;
+	margin-left: 4px;
+	margin-right: 4px;
 }
 
 .admin-posts li a:hover { 
@@ -173,6 +177,7 @@
 	font-size:10px;
 	font-style: normal;
 	color:#a0a0a0;
+	margin-left: 4px;
 }
 
 .admin-posts .post_block {
@@ -232,6 +237,18 @@
 .admin-posts li:hover span {
 	display: block;
 }
+
+.admin-posts li.published:hover a {
+	color: #000;
+}
+.admin-posts li.published a:hover {
+	color: red;
+}
+
+.admin-posts li span:last-child {
+	margin-right: 4px;
+}
+
 
 .table_pager
 {
@@ -363,7 +380,8 @@
 {
 	background-color: #F2F2F2;
 	padding: 8px;
-	font-size: 12px
+	font-size: 12px;
+	border: 1px solid #A9A9A9;
 }
 
 .admin-posts select:hover,
@@ -393,11 +411,6 @@
 
 @media only screen and (max-width: 800px)
 {
-	.admin-editor .title {
-		font-size: 22px;
-		height: 24px;
-	}
-
 	.admin-bar .container a, .admin-bar .container input[type=submit] {
 		padding: 8px;
 		margin: 23px 1px 14px 0;
@@ -418,6 +431,18 @@
 	.admin-bar .container span input {
 		clear: both;
 		float: left;
+	}
+	
+	.general_filter
+	{
+		float: left;
+		margin-top: 8px;
+		clear: both;
+	}
+	
+	.general_filter input[type="submit"]
+	{
+		margin-top: 8px;
 	}
 }
 
