--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -135,7 +135,7 @@ a:active, a:focus { outline:none; }
 body {
 	font-family:'Lato', Helvetica, sans-serif;
 	font-size:16px;
-	background-color:#ffffff;
+	background-color:#FCFCFC;
 	margin:0;
 	padding:0;
 	overflow-x:hidden;
