--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -15,10 +15,12 @@
 	display: inline-block;
 	margin-bottom: 4px;
 	margin-top: 4px;
-	background-color: #F2F2F2;
+	background-color: #FEFEFE;
 	border: 1px solid rgba(169, 169, 169, 0.5);
 	padding-left: 4px;
 	box-sizing: border-box;
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 }
 
 .admin-editor .body {
@@ -280,18 +282,27 @@
 	line-height: 30px;
 	text-align: center;
 	color: #fff;
+	border-radius: 3px;
+	-webkit-touch-callout:none;
+	-webkit-user-select:none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+	cursor: default;
 }
 
 .table_pager .digit, .table_pager .next, .table_pager .prev, .table_pager .first, .table_pager .last
 {
 	width: 28px;
 	height: 28px;
-	background-color: #9A9A9A;
+	background-color: #D13D3D;
 	float: left;
 	margin-left: 3px;
 	line-height: 30px;
 	text-align: center;
-	transition: all 0.3s ease-in-out 0s;
+	transition: all 0.15s ease-in-out 0s;
+	border-radius: 3px;
 }
 
 .table_pager .digit a, .table_pager .next a, .table_pager .prev a, .table_pager .first a, .table_pager .last a
@@ -327,7 +338,7 @@
 {
 	text-decoration: none;
 	color: #CD2A2A;
-	transition: all 0.3s ease-in-out 0s;
+	transition: all 0.15s ease-in-out 0s;
 }
 
 .status_filter a span
@@ -368,6 +379,7 @@
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	font-size: 12px;
+	transition: all 0.15s ease-in-out 0s;
 }
 
 .admin-content input[type="submit"]:hover,
@@ -383,6 +395,9 @@
 	background-color: #F2F2F2;
 	border: 1px solid #A9A9A9;
 	box-sizing: border-box;
+	-webkit-appearance: none;
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 }
 
 .admin-content select,
@@ -392,6 +407,8 @@
 	padding: 8px;
 	font-size: 12px;
 	border: 1px solid #A9A9A9;
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 }
 
 .admin-content select:hover,
@@ -401,7 +418,6 @@
 .admin-content input[type="button"]:focus
 {
 	background-color: #FCFCFC;
-	border-color: #CD2A2A;
 }
 
 .admin-content ::-webkit-input-placeholder {
@@ -556,7 +572,7 @@
 {
 	text-decoration: none;
 	color: #CD2A2A;
-	transition: all 0.3s ease-in-out 0s;
+	transition: all 0.15s ease-in-out 0s;
 }
 
 .default_table tr td a:hover
@@ -592,6 +608,7 @@
     width: auto;
     font-size: 14px;
     border-radius: 5px;
+    transition: all 0.15s ease-in-out 0s;
 }
 
 .submit_btn_table span {
