--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -309,6 +309,7 @@ a img { border:0; }
 	-moz-border-radius:5px;
 	font-size:16px;
 	color:white;
+	transition: all 0.15s ease-in-out 0s;
 }
 
 .square-button:hover { background-color:red; }
@@ -592,6 +593,9 @@ input[type="checkbox"] + label:before
 	transition: all 0.2s ease-in-out 0s;
 	cursor: pointer;
 	text-indent: 0px;
+	-webkit-appearance: none;
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 }
 
 input[type="checkbox"]:checked + label:before
@@ -599,6 +603,8 @@ input[type="checkbox"]:checked + label:before
 	background-color: #d9534f;
 	border: 1px solid #d9534f;
 	content: "\f00c";
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 
 @media only screen and (max-width: 480px)
