--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -114,7 +114,7 @@
 }
 
 .admin-content {
-	width:98%;
+	width: 100%;
 	margin:0 auto;
 }
 
@@ -228,7 +228,7 @@
 .admin-content .inner {
 	float:left;
 	width:100%;
-	padding:20px;
+	padding: 8px 20px 20px 20px;
 	box-sizing:border-box;
 	color:#000;
 }
@@ -238,7 +238,7 @@
 	font-size: 24px;
 	position: absolute;
 	right: 8px;
-	top: 18px;
+	top: 6px;
 	z-index: 2;
 }
 
@@ -700,5 +700,10 @@
 	#content
 	{
 		margin-top: 0px;
+	}
+	
+	.admin-content .inner
+	{
+		padding: 8px;
 	}
 }
