fixed a bug in sessions.

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -646,7 +646,9 @@ input[type="checkbox"]:checked + label:before
 	.styled-box
 	{
 		width: auto;
-	}
+	
+		margin-top: 0px;
+}
 	
 	.blog_post .markdown img
 	{
