--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,4 +1,38 @@
 
+@-webkit-keyframes shake {
+  0%, 100% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+            transform: translate3d(-10px, 0, 0);
+  }
+
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translate3d(10px, 0, 0);
+            transform: translate3d(10px, 0, 0);
+  }
+}
+
+@keyframes shake {
+  0%, 100% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+            transform: translate3d(-10px, 0, 0);
+  }
+
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translate3d(10px, 0, 0);
+            transform: translate3d(10px, 0, 0);
+  }
+}
+
 .admin-editor {
 	width:98%;
 	position:relative;
@@ -400,7 +434,8 @@
 	background-color: red;
 }
 
-.admin-content input[type="text"]
+.admin-content input[type="text"],
+.admin-content input[type="password"]
 {
 	font-size: 12px;
 	padding: 9px;
@@ -423,13 +458,57 @@
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 }
 
+.admin-content textarea
+{
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+}
+
 .admin-content select:hover,
 .bar select:hover,
 .admin-content input[type="text"]:hover,
 .admin-content input[type="text"]:focus,
+.admin-content input[type="password"]:hover,
+.admin-content input[type="password"]:focus,
 .admin-content input[type="button"]:focus
 {
 	background-color: #FCFCFC;
+}
+
+
+.admin-content input[type="text"].disabled, 
+.admin-content input[type="text"]:disabled, 
+.admin-content input[type="password"].disabled, 
+.admin-content input[type="password"]:disabled, 
+.admin-content select.disabled, 
+.admin-content select:disabled, 
+.admin-content textarea.disabled,
+.admin-content textarea:disabled
+{
+	background: rgba(255,255,255,.5);
+	border-color: rgba(222,222,222,.75);
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.04);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.04);
+	color: rgba(51,51,51,.5);
+}
+
+.admin-content input[type="text"].error,  
+.admin-content input[type="password"].error, 
+.admin-content select.error, 
+.admin-content textarea.error
+{
+	background: rgba(255,255,255,.5);
+	border-color: rgba(217, 83, 79, 0.75);
+	-webkit-box-shadow: inset 0 1px 2px rgba(217, 83, 79, 0.75);
+	box-shadow: inset 0 1px 2px rgba(217, 83, 79, 0.75);
+	animation: shake 1s;
+}
+
+.admin-content .inner-form
+{
+	float: none;
+	max-width: 900px;
+	margin: 0 auto;
 }
 
 .admin-content ::-webkit-input-placeholder {
@@ -608,6 +687,7 @@
 	font-size: 16px;
 	content: "\f040";
 	font-weight: normal;
+	font-family: "FontAwesome";
 }
 
 .submit_btn_table {
