--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -426,6 +426,7 @@
 	-moz-border-radius: 5px;
 	font-size: 12px;
 	transition: all 0.15s ease-in-out 0s;
+	-webkit-appearance: none;
 }
 
 .admin-content input[type="submit"]:hover,
@@ -445,6 +446,7 @@
 	-webkit-appearance: none;
 	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+	-webkit-appearance: none;
 }
 
 .admin-content select,
@@ -454,12 +456,15 @@
 	padding: 8px;
 	font-size: 12px;
 	border: 1px solid #A9A9A9;
+	-webkit-appearance: none;
 	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 }
 
 .admin-content textarea
 {
+	border: 1px solid #A9A9A9;
+	-webkit-appearance: none;
 	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 }
@@ -717,6 +722,25 @@
 .admin-content h3
 {
 	clear: both;
+}
+
+#save-success-msg
+{
+	position:fixed;
+	bottom:0px;
+	right:10px;
+	height:85px;
+	width:100px;
+	text-align:center;
+	display:none;
+	padding:5px !important;
+	color:#ffffff;
+	font-weight:bold;
+	background-color:red;
+	border-radius:5px;
+	-khtml-border-radius:5px;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
 }
 
 @media only screen and (max-width: 800px)
